Fixed alignment issues

--- a/scss/_uscc-animations.scss
+++ b/scss/_uscc-animations.scss
@@ -45,6 +45,7 @@
 }
 .flip-wrap {
 	position: relative;
+  float: left;
 }
 .new {
 	position: absolute;
@@ -56,10 +57,8 @@
 }
 
 .total-cost-container {
-  .flip-wrap {
-    float: left;
-  }
   .flip-label {
     float: left;
   }
 }
+
